# spconv

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  PERFORMANCE_GUIDE.md  README.md  codeai-devops.yaml  format_all.sh  pyproject.toml  setup.py  test_before_push.sh
.github/: build.yaml
.github/workflows/: build.yaml  stale.yaml
docs/: BENCHMARK.md  COMMON_PROBLEMS.md  DEVELOPMENT.md  FAQ.md  INT8_GUIDE.md  PERFORMANCE_GUIDE.md  PURE_CPP_BUILD.md  SPCONV_2_BREAKING_CHANGEs.md  SPCONV_DEVELOP_PLAN.md  TENSORRT_INT8_GUIDE.md  USAGE.md
example/: fuse_bn_act.py  mnist_sparse.py  pc_compress.py  simple_hash.py  voxel_gen.py
example/libspconv/: CMakeLists.txt  README.md  benchmark-pc.jarr  main.cc  main.cu  run_build.sh
example/libspconv/spconv/: CMakeLists.txt
example/mnist/: custom_fx2trt.py  mnist_net_transform.py  mnist_ptq.py  mnist_qat.py  mnist_sparse.py
example/tensorrt/: README.md
include/: paramsgrid.h  prettyprint.h  pybind11_utils.h  torch_utils.h
include/cuhash/: cuda_util.h  debugging.h  definitions.h  hash_functions.h  hash_table.cuh  hash_table.h
include/hash/: debugging.h  definitions.h  hash_functions.h  hash_table.cuh  hash_table.h  mt19937ar.h
include/spconv/: box_iou.h  cublas_gemm.h  fused_conv.cu.h  fused_conv.h  fused_spconv_ops.h  geometry.h  indice.cu.h  indice.h  maxpool.h  minkowski.cu.h  mp_helper.h  nms.h  nms_functor.h  nms_gpu.h  nms_ops.h  pillar_scatter_functor.h  pillar_scatter_ops.h  point2voxel.cu.h  point2voxel.h  point2voxel_ops.h  points2voxels.h  pool_ops.h  reordering.cu.h  reordering.h  spconv_ops.h
include/spgemm/: gemm.h  gemm_th.h
include/sphash/: hashmap.h
include/tensorrt/: inference.h
include/tensorview/: cc17.h  common.h  cuda_utils.h  eigen_utils.h  helper_kernel.cu.h  helper_launch.h  kernel_utils.h  mp_helper.h  prettyprint.h  pybind_utils.h  tensor.h  tensorview.h  tools.h  torch_utils.h
include/tsl/: robin_growth_policy.h  robin_hash.h  robin_map.h
include/utility/: timer.h
scripts/: dev_subm.py  sort_bench.py
spconv/: __init__.py  algo.py  algocore.py  build.py  constants.py  conv.py  core.py  cppconstants.py  debug_utils.py  functional.py  modules.py  ops.py  pool.py  spatial.py  tables.py  test_utils.py  tools.py
spconv/benchmark/: __main__.py  basic.py  core.py  me.py  thsp.py
spconv/core_cc/csrc/hash/: core.pyi
spconv/core_cc/csrc/sparse/: alloc.pyi  inference.pyi
spconv/core_cc/csrc/sparse/all/: __init__.pyi  ops1d.pyi  ops3d.pyi  ops_cpu2d.pyi  ops_cpu3d.pyi  ops_cpu4d.pyi
spconv/core_cc/csrc/sparse/all/ops3d/: __init__.pyi
spconv/core_cc/csrc/sparse/all/ops_cpu4d/: __init__.pyi  p2v_c.pyi
spconv/core_cc/csrc/sparse/convops/: __init__.pyi  convops.pyi  gemmops.pyi  spops.pyi
spconv/core_cc/csrc/utils/: boxops.pyi  pcc.pyi
spconv/core_cc/cumm/: common.pyi
spconv/core_cc/cumm/conv/: main.pyi
spconv/core_cc/cumm/gemm/: gather.pyi  main.pyi
spconv/core_cc/cumm/tools/: cuda.pyi
spconv/csrc/: __init__.py
spconv/csrc/hash/: core.py
spconv/csrc/sparse/: __init__.py  all.py  alloc.py  convops.py  cpu_core.py  gather.py  indices.py  inference.py  maxpool.py  pointops.py
spconv/csrc/sparse/devleop/: sort_bench.py  wtf.py
spconv/csrc/utils/: __init__.py  boxops.py  launch.py  pcc.py
spconv/gencode/: __init__.py  __main__.py
spconv/pytorch/: __init__.py  constants.py  conv.py  core.py  core_fx.py  core_nofx.py  cppcore.py  functional.py  hash.py  interpreter.py  modules.py  ops.py  pool.py  spatial.py  tables.py  utils.py
spconv/pytorch/quantization/: __init__.py  backend_cfg.py  conv_fused.py  core.py  fake_q.py  fuse_mapping.py  graph.py  interpreter.py  intrinsic.py  modules.py  qmapping.py  utils.py
spconv/pytorch/quantization/intrinsic/: __init__.py  modules.py
spconv/pytorch/quantization/intrinsic/qat/: __init__.py  modules.py
spconv/pytorch/quantization/intrinsic/quantized/: __init__.py  conv_relu.py
spconv/pytorch/quantization/quantized/: __init__.py  conv.py  reference.py
spconv/utils/: __init__.py
src/cuhash/: CMakeLists.txt  debugging.cpp  debugging.cu  hash_functions.cpp  hash_functions.cu  hash_table.cpp  hash_table.cu  main.cc
src/hash/: CMakeLists.txt  debugging.cpp  debugging.cu  hash_functions.cu  hash_table.cpp  hash_table.cu  main.cc  mt19937ar.cpp
src/spconv/: CMakeLists.txt  all.cc  cublas_gemm.cc  fused_conv.cu  indice.cc  indice.cu  maxpool.cc  maxpool.cu  nms.cc  nms.cu  pillar_scatter.cu  point2voxel.cu  point2voxel_ops.cc  pool_ops.cc  reordering.cc  reordering.cu  spconv_ops.cc
src/spgemm/: CMakeLists.txt  gemm.cu  torchdev_cutlass.cu
src/utils/: CMakeLists.txt  all.cc  nms.cu
test/: CMakeLists.txt  aaa.py  bench_build_time.py  benchmark.py  benchmark_detail.py  benchmark_points_to_voxel.py  benchmark_points_to_voxel_gpu.py  dev.py  dev2.py  fake_dist_train.py  fake_train.py  test_all_algo.py  test_conv.py  test_implgemm.py  test_multi_impl.py
test/apps/: testapp.py
test/data/: benchmark-pc.npz  test_spconv.pkl
test/debug/: dev.py  dev2.py
test/develop/: dev.py  mnist_int8_dev.py
test/src/: test_conv_rule.cpp
tools/: README.md  build-wheels-dev.sh  build-wheels.sh  install_windows_cuda.ps1  linux_test_build.sh  msvc_setup.ps1
